Actualización de mi página

--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minigames</title>
+    <title>MinijuegoLivan - Juegos Gratis Online</title>
+    <meta name="description" content="Juegos gratis online en MinijuegoLivan.org: acción, carros, deportes y más">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Minigames</h1>
+        <h1>MinijuegoLivan</h1>
+        <p>¡Hola, soy Livan! Bienvenidos a mi sitio de juegos gratis online. Acá tenés acción, carreras, deportes y más para disfrutar cuando quieras.</p>
     </header>
 
     <div class="game-grid">
-        <!-- Juegos originales -->
         <div class="game-card">
             <img src="1.jpg" alt="Bullet Force Multiplayer">
             <h3>Bullet Force Multiplayer</h3>
+            <p>Shooter multijugador con gráficos intensos y pura adrenalina.</p>
             <button class="play-button" onclick="openGameModal('Bullet Force Multiplayer', 'game1')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -24,6 +26,7 @@
         <div class="game-card">
             <img src="2.jpg" alt="Krunker.io">
             <h3>Krunker.io</h3>
+            <p>Disparos rápidos en un FPS online que te engancha.</p>
             <button class="play-button" onclick="openGameModal('Krunker.io', 'game2')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -31,6 +34,7 @@
         <div class="game-card">
             <img src="3.jpg" alt="Rally Point 3">
             <h3>Rally Point 3</h3>
+            <p>Carreras rally con autos potentes y pistas extremas.</p>
             <button class="play-button" onclick="openGameModal('Rally Point 3', 'game3')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -38,6 +42,7 @@
         <div class="game-card">
             <img src="4.jpg" alt="Mad Truck Challenge">
             <h3>Mad Truck Challenge</h3>
+            <p>Camionetas monstruo en competencias salvajes.</p>
             <button class="play-button" onclick="openGameModal('Mad Truck Challenge', 'game4')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -45,6 +50,7 @@
         <div class="game-card">
             <img src="5.png" alt="Drift Hunters">
             <h3>Drift Hunters</h3>
+            <p>Drifteá autos realistas en circuitos abiertos.</p>
             <button class="play-button" onclick="openGameModal('Drift Hunters', 'game5')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -52,6 +58,7 @@
         <div class="game-card">
             <img src="6.png" alt="Super Bike The Champion">
             <h3>Super Bike The Champion</h3>
+            <p>Carreras de motos con velocidad y curvas locas.</p>
             <button class="play-button" onclick="openGameModal('Super Bike The Champion', 'game6')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -59,6 +66,7 @@
         <div class="game-card">
             <img src="7.jpg" alt="Penalty Shooters 2">
             <h3>Penalty Shooters 2</h3>
+            <p>Tiros penales para probar tu puntería.</p>
             <button class="play-button" onclick="openGameModal('Penalty Shooters 2', 'game7')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -66,6 +74,7 @@
         <div class="game-card">
             <img src="8.jpg" alt="Table Tennis World Tour">
             <h3>Table Tennis World Tour</h3>
+            <p>Tenis de mesa con rivales globales.</p>
             <button class="play-button" onclick="openGameModal('Table Tennis World Tour', 'game8')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -73,6 +82,7 @@
         <div class="game-card">
             <img src="9.png" alt="8 Ball Billiards Classic">
             <h3>8 Ball Billiards Classic</h3>
+            <p>Pool clásico para amantes del billar.</p>
             <button class="play-button" onclick="openGameModal('8 Ball Billiards Classic', 'game9')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -80,6 +90,7 @@
         <div class="game-card">
             <img src="10.jpg" alt="Paper.io 2">
             <h3>Paper.io 2</h3>
+            <p>Conquistá territorio con táctica y cuidado.</p>
             <button class="play-button" onclick="openGameModal('Paper.io 2', 'game10')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -87,6 +98,7 @@
         <div class="game-card">
             <img src="11.png" alt="2048">
             <h3>2048</h3>
+            <p>Combina números en este puzzle desafiante.</p>
             <button class="play-button" onclick="openGameModal('2048', 'game11')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -94,6 +106,7 @@
         <div class="game-card">
             <img src="12.jpg" alt="Subway Clash 3D">
             <h3>Subway Clash 3D</h3>
+            <p>Batallas subterráneas llenas de acción y caos.</p>
             <button class="play-button" onclick="openGameModal('Subway Clash 3D', 'game12')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -101,6 +114,7 @@
         <div class="game-card">
             <img src="15.jpg" alt="Smash Karts">
             <h3>Smash Karts</h3>
+            <p>Karts con armas para peleas explosivas y divertidas.</p>
             <button class="play-button" onclick="openGameModal('Smash Karts', 'game15')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -108,6 +122,7 @@
         <div class="game-card">
             <img src="16.jpg" alt="Worms Zone">
             <h3>Worms Zone</h3>
+            <p>Come y crecé en esta aventura de gusanos.</p>
             <button class="play-button" onclick="openGameModal('Worms Zone', 'game16')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -115,6 +130,7 @@
         <div class="game-card">
             <img src="17.png" alt="Super Star Car">
             <h3>Super Star Car</h3>
+            <p>Compite como piloto estrella en carreras pro.</p>
             <button class="play-button" onclick="openGameModal('Super Star Car', 'game17')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -122,6 +138,7 @@
         <div class="game-card">
             <img src="18.jpg" alt="Tank Trouble">
             <h3>Tank Trouble</h3>
+            <p>Tanques en laberintos para batallas épicas.</p>
             <button class="play-button" onclick="openGameModal('Tank Trouble', 'game18')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -129,6 +146,7 @@
         <div class="game-card">
             <img src="19.jpg" alt="Gun Mayhem 2">
             <h3>Gun Mayhem 2</h3>
+            <p>Duelos frenéticos con armas y saltos locos.</p>
             <button class="play-button" onclick="openGameModal('Gun Mayhem 2', 'game19')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -136,6 +154,7 @@
         <div class="game-card">
             <img src="20.jpg" alt="Getaway Shootout">
             <h3>Getaway Shootout</h3>
+            <p>Carreras y tiroteos en un caos para dos jugadores.</p>
             <button class="play-button" onclick="openGameModal('Getaway Shootout', 'game20')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -143,14 +162,15 @@
         <div class="game-card">
             <img src="21.jpg" alt="City Car Driving Simulator">
             <h3>City Car Driving Simulator</h3>
+            <p>Conducí por la ciudad con autos realistas.</p>
             <button class="play-button" onclick="openGameModal('City Car Driving Simulator', 'game21')">
                 <i class="fas fa-play"></i> Jugar
             </button>
         </div>
-        <!-- Juegos nuevos -->
         <div class="game-card">
             <img src="22.jpg" alt="Rooftop Snipers">
             <h3>Rooftop Snipers</h3>
+            <p>Duelos en tejados con disparos precisos y tensión.</p>
             <button class="play-button" onclick="openGameModal('Rooftop Snipers', 'game22')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -158,6 +178,7 @@
         <div class="game-card">
             <img src="23.jpg" alt="Basket Random">
             <h3>Basket Random</h3>
+            <p>Básquet caótico con física divertida.</p>
             <button class="play-button" onclick="openGameModal('Basket Random', 'game23')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -165,6 +186,7 @@
         <div class="game-card">
             <img src="24.jpg" alt="Slither.io">
             <h3>Slither.io</h3>
+            <p>Crece tu serpiente esquivando rivales.</p>
             <button class="play-button" onclick="openGameModal('Slither.io', 'game24')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -172,6 +194,7 @@
         <div class="game-card">
             <img src="25.png" alt="Diep.io">
             <h3>Diep.io</h3>
+            <p>Mejorá tu tanque y dominá el campo.</p>
             <button class="play-button" onclick="openGameModal('Diep.io', 'game25')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -179,6 +202,7 @@
         <div class="game-card">
             <img src="26.jpeg" alt="Happy Wheels">
             <h3>Happy Wheels</h3>
+            <p>Aventura loca con obstáculos mortales.</p>
             <button class="play-button" onclick="openGameModal('Happy Wheels', 'game26')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -186,6 +210,7 @@
         <div class="game-card">
             <img src="27.jpg" alt="Skribbl.io">
             <h3>Skribbl.io</h3>
+            <p>Dibujá y adiviná palabras con amigos online.</p>
             <button class="play-button" onclick="openGameModal('Skribbl.io', 'game27')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -193,6 +218,7 @@
         <div class="game-card">
             <img src="28.jpg" alt="Subway Surfers">
             <h3>Subway Surfers</h3>
+            <p>Corré y esquivá trenes en esta aventura sin fin.</p>
             <button class="play-button" onclick="openGameModal('Subway Surfers', 'game28')">
                 <i class="fas fa-play"></i> Jugar
             </button>
@@ -210,6 +236,10 @@
             <iframe id="gameIframe" class="game-iframe" allowfullscreen></iframe>
         </div>
     </div>
+
+    <footer>
+        <p>© 2025 MinijuegoLivan.org | <a href="privacy.html">Política de Privacidad</a> | <a href="terms.html">Términos</a> | <a href="contact.html">Contacto</a> | <a href="reviews.html">Reseñas</a></p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
