--- a/index.html
+++ b/index.html
@@ -239,6 +239,12 @@
 
     <footer>
         <p>© 2025 MinijuegoLivan.org | <a href="privacy.html">Política de Privacidad</a> | <a href="terms.html">Términos</a> | <a href="contact.html">Contacto</a> | <a href="reviews.html">Reseñas</a></p>
+        <div class="share-buttons">
+            <a href="https://wa.me/?text=¡Mirá MinijuegoLivan.org! Juegos gratis online zarpados: https://www.minijuegolivan.org/" target="_blank" class="share-btn whatsapp"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.minijuegolivan.org/" target="_blank" class="share-btn facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://twitter.com/intent/tweet?text=¡Mirá MinijuegoLivan.org! Juegos gratis online zarpados&url=https://www.minijuegolivan.org/" target="_blank" class="share-btn twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/?url=https://www.minijuegolivan.org/" target="_blank" class="share-btn instagram"><i class="fab fa-instagram"></i></a>
+        </div>
     </footer>
 
     <script src="script.js"></script>
