Agregado logo y finalizada fase de funcionamiento

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>MinijuegoLivan</h1>
+        <img src="logo.png" alt="MinijuegoLivan Logo" class="logo">
         <p>¡Hola, soy Livan! Bienvenidos a mi sitio de juegos gratis online. Acá tenés acción, carreras, deportes y más para disfrutar cuando quieras.</p>
         <div class="category-filter">
             <button class="filter-btn" data-category="all">Todos</button>
