--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <meta name="description" content="Juegos gratis online en MinijuegoLivan.org: acción, carros, deportes y más">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <nav class="navbar">
+        <div class="header-container">
             <img src="logo.jpg" alt="MinijuegoLivan Logo" class="logo">
             <div class="menu-toggle">
                 <i class="fas fa-bars"></i>
             </div>
-            <div class="category-filter">
+            <nav class="category-filter">
                 <button class="filter-btn" data-category="all">Todos</button>
                 <button class="filter-btn" data-category="action">Acción</button>
                 <button class="filter-btn" data-category="racing">Carreras</button>
                 <button class="filter-btn" data-category="sports">Deportes</button>
                 <button class="filter-btn" data-category="puzzles">Puzles</button>
                 <button class="filter-btn" data-category="multiplayer">Multijugador</button>
-            </div>
-        </nav>
+            </nav>
+        </div>
         <p>¡Hola, soy Livan! Bienvenidos a mi sitio de juegos gratis online.</p>
     </header>
 
