Logo como fondo y footer optimizado para Android

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
     <header>
         <div class="header-container">
-            <img src="logo.jpg" alt="MinijuegoLivan Logo" class="logo">
             <div class="menu-toggle">
                 <i class="fas fa-bars"></i>
             </div>
@@ -335,7 +334,13 @@
 
     <footer>
         <div class="footer-content">
-            <p>© 2025 MinijuegoLivan.org | <a href="privacy.html">Política de Privacidad</a> | <a href="terms.html">Términos</a> | <a href="contact.html">Contacto</a> | <a href="reviews.html">Reseñas</a></p>
+            <p>© 2025 MinijuegoLivan.org</p>
+            <nav class="footer-links">
+                <a href="privacy.html">Política de Privacidad</a>
+                <a href="terms.html">Términos</a>
+                <a href="contact.html">Contacto</a>
+                <a href="reviews.html">Reseñas</a>
+            </nav>
             <div class="share-buttons">
                 <a href="https://wa.me/+18095029777?text=¡Chequeá mi sitio MinijuegoLivan.org! Juegos gratis online zarpados: https://www.minijuegolivan.org/" target="_blank" class="share-btn whatsapp"><i class="fab fa-whatsapp"></i></a>
                 <a href="https://www.instagram.com/andreslivan/" target="_blank" class="share-btn instagram"><i class="fab fa-instagram"></i></a>
