--- a/index.html
+++ b/index.html
@@ -10,19 +10,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="header-container">
-            <div class="logo">
-                <i class="fas fa-gamepad"></i>
-                <span>MinijuegoLivan</span>
+    <header class="header">
+        <div class="header-content">
+            <div class="header-logo">
+                <img src="neon-gamer-logo.jpg" alt="MinijuegoLivan Logo" class="header-logo-img">
             </div>
-            <nav>
-                <div class="search-container">
-                    <input type="text" class="search-box" placeholder="Buscar juegos...">
-                </div>
-            </nav>
+            <div class="header-welcome">
+                <h1>¡MINIJUEGOLIVAN!</h1>
+                <p class="welcome-text">¡HOLA, SOY LIVAN! BIENVENIDOS A MI SITIO DE JUEGOS GRATIS ONLINE</p>
+            </div>
+            <div class="search-container">
+                <form class="search-form" action="#" method="get">
+                    <input type="text" placeholder="¡BUSCA TUS JUEGOS FAVORITOS!" class="search-input">
+                    <button type="submit" class="search-button">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </form>
+            </div>
         </div>
-        <p>¡Hola, soy Livan! Bienvenidos a mi sitio de juegos gratis online.</p>
     </header>
 
     <div class="container">
@@ -450,82 +455,80 @@
     </div>
 
     <footer class="footer">
-        <div class="footer-top">
-            <div class="footer-logo">
-                <img src="neon-gamer-logo.jpg" alt="Neon Gamer Logo" class="neon-logo">
-            </div>
+        <div class="footer-logo">
+            <img src="neon-gamer-logo.jpg" alt="Neon Gamer Logo" class="neon-logo">
         </div>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>Navegación</h3>
+                <h3>¡JUEGA AHORA!</h3>
                 <ul class="footer-nav">
-                    <li><a href="index.html"><i class="fas fa-home"></i>Inicio</a></li>
-                    <li><a href="#populares"><i class="fas fa-star"></i>Populares</a></li>
-                    <li><a href="#nuevos"><i class="fas fa-clock"></i>Nuevos</a></li>
-                    <li><a href="#cuenta"><i class="fas fa-user"></i>Mi Cuenta</a></li>
+                    <li><a href="index.html"><i class="fas fa-home"></i>INICIO</a></li>
+                    <li><a href="#populares"><i class="fas fa-star"></i>TOP JUEGOS</a></li>
+                    <li><a href="#nuevos"><i class="fas fa-clock"></i>¡RECIÉN LLEGADOS!</a></li>
+                    <li><a href="#cuenta"><i class="fas fa-user"></i>TU CUENTA VIP</a></li>
                 </ul>
                 <div class="footer-featured">
-                    <h4>Juegos Destacados</h4>
+                    <h4>¡JUEGOS DESTACADOS!</h4>
                     <div class="featured-games">
                         <a href="#" class="featured-game">
                             <img src="1.jpg" alt="Bullet Force">
-                            <span>Bullet Force</span>
+                            <span>¡BULLET FORCE GRATIS!</span>
                         </a>
                         <a href="#" class="featured-game">
                             <img src="venge-io.jpg" alt="Venge.io">
-                            <span>Venge.io</span>
+                            <span>¡VENGE.IO MULTIJUGADOR!</span>
                         </a>
                     </div>
                 </div>
             </div>
             <div class="footer-section">
-                <h3>Categorías</h3>
+                <h3>¡CATEGORÍAS TOP!</h3>
                 <ul class="footer-categories">
-                    <li><a href="#accion"><i class="fas fa-fire"></i>Juegos de Acción</a></li>
-                    <li><a href="#carreras"><i class="fas fa-car"></i>Juegos de Carreras</a></li>
-                    <li><a href="#deportes"><i class="fas fa-futbol"></i>Juegos de Deportes</a></li>
-                    <li><a href="#multiplayer"><i class="fas fa-users"></i>Multijugador</a></li>
+                    <li><a href="#accion"><i class="fas fa-fire"></i>¡JUEGOS DE ACCIÓN EXPLOSIVOS!</a></li>
+                    <li><a href="#carreras"><i class="fas fa-car"></i>¡CARRERAS A TODA VELOCIDAD!</a></li>
+                    <li><a href="#deportes"><i class="fas fa-futbol"></i>¡DEPORTES EXTREMOS!</a></li>
+                    <li><a href="#multiplayer"><i class="fas fa-users"></i>¡JUEGA CON AMIGOS!</a></li>
                 </ul>
                 <div class="ad-space">
-                    <span>Espacio Publicitario</span>
+                    <span>¡PRÓXIMAMENTE NUEVOS JUEGOS!</span>
                 </div>
             </div>
             <div class="footer-section">
-                <h3>Comunidad</h3>
+                <h3>¡ÚNETE A NUESTRA COMUNIDAD!</h3>
                 <div class="social-links">
-                    <a href="https://www.facebook.com/share/1C9SVZUs19/" class="social-link" target="_blank" title="Sígueme en Facebook">
+                    <a href="https://www.facebook.com/share/1C9SVZUs19/" class="social-link" target="_blank" title="¡Síguenos en Facebook!">
                         <i class="fab fa-facebook"></i>
                     </a>
-                    <a href="https://www.instagram.com/minijuegolivan" class="social-link" target="_blank" title="Sígueme en Instagram">
+                    <a href="https://www.instagram.com/minijuegolivan" class="social-link" target="_blank" title="¡Síguenos en Instagram!">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="#" class="social-link" target="_blank" title="Únete a Discord">
+                    <a href="#" class="social-link" target="_blank" title="¡Únete a Discord!">
                         <i class="fab fa-discord"></i>
                     </a>
                 </div>
                 <div class="newsletter">
-                    <h4>¡Recibe Nuevos Juegos!</h4>
+                    <h4>¡RECIBE JUEGOS GRATIS!</h4>
                     <form class="newsletter-form">
-                        <input type="email" placeholder="Tu correo electrónico">
+                        <input type="email" placeholder="¡Ingresa tu correo para juegos GRATIS!">
                         <button type="submit"><i class="fas fa-paper-plane"></i></button>
                     </form>
                 </div>
                 <div class="contact-info">
-                    <h4>Contacto</h4>
+                    <h4>¡CONTÁCTANOS!</h4>
                     <p><i class="fas fa-envelope"></i>andreslivancon@gmail.com</p>
-                    <a href="contact.html" class="contact-link">Contáctanos</a>
+                    <a href="contact.html" class="contact-link">¡ENVÍANOS UN MENSAJE!</a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
             <div class="footer-bottom-content">
                 <div class="footer-links">
-                    <a href="privacy.html">Política de Privacidad</a>
-                    <a href="terms.html">Términos y Condiciones</a>
-                    <a href="reviews.html">Reseñas</a>
-                    <a href="#advertise">Publicidad</a>
+                    <a href="privacy.html">PRIVACIDAD</a>
+                    <a href="terms.html">TÉRMINOS</a>
+                    <a href="reviews.html">RESEÑAS</a>
+                    <a href="#advertise">PUBLICIDAD</a>
                 </div>
-                <p class="copyright">&copy; 2025 MinijuegoLivan - La mejor colección de juegos online</p>
+                <p class="copyright">&copy; 2025 MinijuegoLivan - ¡LA MEJOR COLECCIÓN DE JUEGOS GRATIS!</p>
             </div>
         </div>
     </footer>
